vendor/macro-string/tests/ui/no_such_file.rs
use macro_string_eval::eval;

const _: &str = eval!(include_str!(concat!(env!("CARGO_MANIFEST_DIR"), "/nonexist.ent")));

fn main() {}
